syntax = "proto3";
package skiff;

message GetRequest {
  string key = 1;
}

message GetReply {
  optional bytes value = 1;
}

message InsertRequest {
  string key = 1;
  bytes value = 2;
}

message InsertReply {
  bool success = 1;
}

message DeleteRequest {
  string key = 1;
}

message DeleteReply {
  bool success = 1;
}

service Skiff {
  rpc Get(GetRequest) returns (GetReply);
  rpc Insert(InsertRequest) returns (InsertReply);
  rpc Delete(DeleteRequest) returns (DeleteReply);
}
